--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,11 @@
-spring.thymeleaf.cache = false
-
-mybatis.type-aliases-package = com.project.scientist.entity
 # 解析非严格化的xml文档
-spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.cache = false
+spring.thymeleaf.encoding=utf-8
+
 
 # 开启Spring Profile
 spring.profiles.active=@activatedProperties@
-
-# Spring监控
-security.user.name=admin
-security.user.password=123456
-management.security.enabled=false
-management.security.role=ADMIN
-management.contextPath=/manage
 
 # 日志
 logging.level.root=INFO
@@ -22,7 +15,6 @@ logging.pattern.console=%d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg
 logging.pattern.file=%d{yyyy/MM/dd-HH:mm} [%thread] %-5level %logger- %msg%n
 
 # 设置spring读取配置文件时编码,要不然会乱码
-banner.charset=UTF-8
 server.tomcat.uri-encoding=UTF-8
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
